# ZAP

./: .gitignore  .zapcontext  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  README.md  debug_test.py  debug_test2.py  debug_test3.py  debug_test4.py  instructions.md  main.py  main.zap  patch_test.json  pyproject.toml  stdin.txt  test_all.py  test_all2.py  test_db.zap  test_dict.zap  test_dict2.zap  test_dict3.zap  test_el.zap  test_elif.zap  test_fn.zap  test_if.zap  test_if2.zap  test_match.zap  test_recovery.py  test_recovery2.py  test_recurse.zap  test_restore.py  test_self_hosting.py  test_str.zap  test_types.py  zap.json
examples/: ai_native.zap  beginners.zap  blog.zap  comprehensions.zap  demo.zap  diabetes_ai.zap  fibo.zap  hello.zap  hello.zap.py  interp.zap  ml_pipeline.zap  nextgen.zap  numbers_as_vars.zap  physics_engine.zap  tensor_demo.zap  xor_ai.zap  zapflow-test.zap  zapphysics.zap
lib/: collections.zap  db.zap  deploy.zap  http.zap  std.zap  strings.zap  zap_ai.zap
self_host/: ast_nodes.zap  env.zap  hello.zap  lexer.zap  parser.zap  self_host_interpreter.zap  test_ast.zap  test_no_parser.zap  test_parser.zap  test_parser_debug.zap  test_parser_debug2.zap  test_parser_full.zap  test_parser_with_py_tokens.zap  test_self_hosting.py  test_simple.zap  tokens.zap  zap_interpreter.zap  zap_to_python.zap
src/: analysis.py  api_server.py  ast_nodes.py  checker.py  cli.py  codegen.py  compiler.py  context.py  diagnostics.py  diff.py  environment.py  evaluator.py  indexer.py  lexer.py  lsp.py  parser.py  pkg.py  protocol.py  test_runner.py  tokens.py  tracer.py  (+3 more)
(+9 files in other folders)
